fdo#44710 PDF Import: Correction of position of rotated text

Change-Id: Ie53b25a6cec88c07a317c50bd0965282fac64ff0
Reviewed-on: https://gerrit.libreoffice.org/8725
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>